fix navbar z-index

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -4,6 +4,7 @@
   width: 100%;
   top: 0;
   left: 0;
+  z-index: 1;
   background-color: #00a087;
   color: #e8fdff;
   padding: 0 2em 0 2em;
